# gx-converter-web

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
gx-converter/: g_code_property_extractor.py  g_code_transformer.py  gcode.py  header.py  main.py
gx-converter/tests/: test_g_code_transformer.py
gx_converter/: g_code_property_extractor.py  g_code_transformer.py  header.py  main.py
gx_converter/tests/: test_g_code_property_extractor.py
web/: index.html
